--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ env:
   NAMESPACE: default
   SECRET: containersecret
   APP_NAME: aks-container-githubactions
+  imageversion: $GITHUB_RUN_ID
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -70,7 +71,7 @@ jobs:
         manifests: |
           aksdeploy.yaml
         images: |
-          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:$GITHUB_RUN_ID
+          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ imageversion }}
         imagepullsecrets: |
           ${{ env.SECRET }}
         namespace: ${{ env.NAMESPACE }}
